# gst-orchestrator

./: CMakeLists.txt  README.md  README_en.md
config/: pipelines.yaml
proto/: pipeline.proto
src/: grpc_server.cpp  main.cpp  pipeline.grpc.pb.cc  pipeline.grpc.pb.h  pipeline.pb.cc  pipeline.pb.h  pipeline_builder.cpp  pipeline_builder.h  pipeline_manager.cpp  pipeline_manager.h  yaml_parser.cpp  yaml_parser.h
